--- a/main.html
+++ b/main.html
@@ -8,13 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<caption>List of all transactions</caption>
+	
 	<table class="table" border="1">
-		<tr>
+		<thead>
+		<tr class="table-hover">
 			<th>#</th>
 			<th>From</th>
 			<th>To</th>
 			<th>Amount($)</th>
 		</tr>
+			</thead>
 		<tr>
 			<td>1</td>
 			<td>Mark</td>
@@ -39,10 +43,12 @@
 		
 		
 		</tr>
+		<tfoot>
 		<tr  >
 			
-		<td id="total" colspan="4">Total 4000</td>
+		<td id="total" colspan="3">Total 4000</td>
 		</tr>
+			</tfoot>
 		
 	</table>
     <script type="text/javascript" src="./script.js">
