--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<caption>List of all transactions</caption>
 	
 	<table class="table" border="1">
-		<thead>
+		<caption>List of all transactions</caption>
+		<thead class='table-dark'>
 		<tr class="table-hover">
 			<th>#</th>
 			<th>From</th>
