--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	
+	<div class="table-responsive">
 	<table class="table" border="1">
 		<caption>List of all transactions</caption>
 		<thead class='table-dark'>
@@ -43,7 +43,7 @@
 		
 		
 		</tr>
-		<tfoot>
+		<tfoot class="table-light">
 		<tr  >
 			
 		<td id="total" colspan="3">Total 4000</td>
@@ -51,6 +51,7 @@
 			</tfoot>
 		
 	</table>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
